--- a/formulario.html
+++ b/formulario.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário</title>
-    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <div class="container">
         <h2>Formulário de Contato</h2>
@@ -22,5 +19,4 @@
         </form>
     </div>
 </body>
-
 </html>
